# troca-uma-ideia

./: .gitignore  Makefile  README.md  docker-compose.yml  pytest.ini
.github/workflows/: backend.yml
backend/: .env  Dockerfile  check_env_encoding.py  db.sqlite3  deploy.sh  manage.py  pyproject.toml  pythonanywhere_deploy_key  pythonanywhere_deploy_key.pub  requirements.txt  wait-for-it.sh
backend/.github/workflows/: backend.yml  ci.yml
backend/core/: models.py
backend/deploy/: views.py
backend/talkzone/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
backend/talkzone/migrations/: 0001_initial.py  0002_profile.py  0003_profile_bio.py  0004_tweet_likes.py  0005_profile_followers_tweet_is_retweet_and_more.py  0006_rename_is_retweet_tweet_is_repapo_tweet_reply_to_and_more.py
backend/talkzone/tests/: conftest.py  test_profile.py  test_profiles.py  test_trends.py  test_tweets.py
backend/trocaumaideia/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .env  package-lock.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: axios.ts
frontend/src/components/: PrivateRoute.tsx
frontend/src/components/Footer/: Footer.module.css  Footer.tsx
frontend/src/components/Header/: Header.module.css  Header.tsx
frontend/src/components/Layout/: Layout.module.css  Layout.tsx
frontend/src/components/Trends/: Trends.tsx
frontend/src/components/TweetCard/: TweetCard.module.css  TweetCard.tsx
frontend/src/components/TweetForm/: TweetForm.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Home.tsx  Login.tsx  MyTweets.tsx  Register.tsx
frontend/src/pages/Home/: Home.module.css  Home.tsx
frontend/src/pages/Login/: Login.module.css  Login.tsx
frontend/src/pages/Profile/: Profile.module.css  Profile.tsx
frontend/src/types/: UserProfile.ts
(+5 files in other folders)
